add note about josh in css

--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ a {
   color:  #2673D9 !important;
 }
 
+/* these are Josh Comeau's amazing style!! */
 div.note {
     position: relative;
     padding: 1em;
